# gh-apps-tests

./: .copilotignore  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  STRUCTURE.md  build.bat  build.sh  client.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf  test_direct.py
.github/: copilot-instructions.md
.github/workflows/: auto-assign-copilot.yml  ci-cd.yml
docker/: Dockerfile  docker-compose.yml
scripts/: build.bat  build.sh  security-check.sh  start.bat  start.sh
src/: __init__.py  run_server.py  start_server.py
tests/: __init__.py  test_ci.py  test_direct.py  test_integration.py  test_service.py  test_simple_integration.py  test_unit.py  test_weatherservice.py
